# nexus-games

./: .clang-format  .editorconfig  .gitignore  LINKS.md  Projects.code-workspace  README.md  docker-compose.yml
.fleet/: settings.json
.github/instructions/: environment-variables.md  project-specification.instructions.md
replays/queue/: 2025-05-30 18.00.18 Braxis Outpost.StormReplay  2025-05-30 18.16.10 Silver City.StormReplay  2025-05-30 18.42.19 Silver City.StormReplay  2025-05-30 18.54.21 Silver City.StormReplay  2025-05-30 19.03.46 Industrial District.StormReplay  2025-05-30 19.31.35 Cursed Hollow.StormReplay  2025-05-30 19.52.17 Dragon Shire.StormReplay  2025-05-30 21.39.12 Hanamura Temple.StormReplay  2025-05-30 22.05.49 Garden of Terror.StormReplay  2025-05-30 22.28.26 Cursed Hollow.StormReplay  2025-05-31 16.04.39 Braxis Outpost.StormReplay  2025-05-31 16.23.32 Lost Cavern.StormReplay  2025-05-31 16.31.20 Braxis Outpost.StormReplay  2025-05-31 16.47.52 Silver City.StormReplay  2025-05-31 17.01.22 Industrial District.StormReplay  2025-05-31 17.13.20 Lost Cavern.StormReplay  2025-05-31 17.28.49 Industrial District.StormReplay  2025-05-31 17.49.36 Braxis Outpost.StormReplay  2025-05-31 18.09.35 Silver City.StormReplay  2025-05-31 19.39.37 Cursed Hollow.StormReplay  2025-05-31 20.19.40 Silver City.StormReplay  2025-07-01 21.22.33 Braxis Outpost.StormReplay  2025-07-01 21.44.22 Braxis Outpost.StormReplay  2025-07-01 22.28.40 Braxis Outpost.StormReplay  2025-07-01 22.58.25 Lost Cavern.StormReplay  2025-07-02 17.18.23 Lost Cavern.StormReplay  2025-07-02 17.37.33 Tomb of the Spider Queen.StormReplay  2025-07-02 18.04.12 Alterac Pass.StormReplay  2025-07-02 18.36.55 Garden of Terror.StormReplay  2025-07-02 20.01.36 Industrial District.StormReplay  2025-07-02 20.20.48 Blackheart's Bay.StormReplay  2025-07-02 20.38.53 Dragon Shire.StormReplay  2025-07-02 21.22.24 Cursed Hollow.StormReplay  2025-07-02 21.56.52 Alterac Pass.StormReplay  2025-07-02 22.29.32 Cursed Hollow.StormReplay  2025-07-03 00.20.41 Braxis Outpost.StormReplay  2025-07-03 00.36.57 Silver City.StormReplay  2025-07-03 01.08.08 Braxis Outpost.StormReplay  2025-07-03 21.46.49 Tomb of the Spider Queen.StormReplay  2025-07-03 21.51.17 Pull Party.StormReplay  (+10 more)
scripts/: bootstrap-python.ps1  clear-session-outputs.ps1  heroes-of-the-storm-resize.ps1
scripts/Hyper-V/: Add-VMGpuPartitionAdapterFiles.psm1  PreChecks.ps1  README.md  Set-VMGpuPartitionAdapter.ps1  Update-VMGpuPartitionDriver.ps1
sessions/current/: session.json
sessions/current/state/: session_service.json  supervisor.json
src/game-capture/: .clang-format  CMakeLists.txt  CMakePresets.json
src/game-capture/src/: main.cpp
src/game-controller/: CameraController.cs  Program.cs  game-controller.slnx
src/hero-detection/: pyproject.toml
src/hero-detection/detection/: service.py  util.py
src/hero-detection/tests/: test_generate_sidecars.py
src/hero-inference/: Dockerfile  pyproject.toml
src/hero-inference/detection/: service.py
src/hero-inference/detection/config/: defaults.toml
src/hero-inference/tests/: test_generate_sidecars.py
src/hero-training/: Dockerfile  README.md  pyproject.toml
src/hero-training/configs/: yolo11n-long.yaml  yolo11n-rtx4080.yaml  yolo11n.yaml
src/hero-training/hero_training/: __main__.py  cli.py
src/orchestrator/: pyproject.toml
src/orchestrator/orchestrator/: __init__.py  main.py  util.py
src/replay-harvestor/: Dockerfile  Program.cs
src/session-manager/: pyproject.toml
src/session-manager/session_manager/: service.py
training/: README.dataset.txt  README.roboflow.txt  data.yaml
training/data/: label_studio.sqlite3
training/test/labels/: 0434d8f5-AC68F863-E82E-4BC1-9BC7-46CEED1ED149_png.rf.82398aedaed15d1cf7f88e8963ef9864.txt  0ed81192-A9783660-8971-408C-9A30-C831BEFBE025_png.rf.7459b525dabf99d8c2250be352751b60.txt  23c68f51-70F07280-6E61-415B-859E-11F6601FDAC9_png.rf.ef4794670350119835929c8b47b556c1.txt  28fd15b8-2BD9F14B-186B-40FD-B3F2-57B67A79A9AC_png.rf.f29584699f05e97e2516c83c5a38df8a.txt  325095a4-F8C70A16-162B-40FD-A226-40A44ADCEBA6_png.rf.ef00465f5a99b5bee1e8931bff3ee09b.txt  3c42347c-EF791931-F134-4779-BC1C-A9D69C1DD736_png.rf.b844d39e75f0498ccd2c73bbd6bd1ff5.txt  483380ee-F876708C-47DF-47EA-B24C-7A451C2B36CF_png.rf.22fb55e85a9e5a1bfe084fde9d92f4d4.txt  4c7f2210-AFADD6B6-7E34-4CF3-A78A-C3FB54F56D67_png.rf.65ad313e969d0082e4606c1afcace7a9.txt  567bd3dd-D67F0B05-A2A5-4203-AEF6-CF963E3AF788_png.rf.a6cb088a93b11298befe9ef9b0cc637f.txt  882ad392-9C2C2F92-6ED5-448C-88F7-EED181F151CF_png.rf.0235554255e4a8e77eac0c0c479ad4e7.txt  8d084f6b-1964253E-E6F1-49D5-A47C-584A20E92BAE_png.rf.17a4cac039fb8c23ae3548aaf9c5f910.txt  94cb1a6e-AD25F33B-5B1A-4948-9F31-2B8019842364_png.rf.5a98315a5b66533a10112cd8c82a5fe4.txt  Screenshot-2025-09-21-195846-Copy-2-_png.rf.fe2718972cf139664d67a4275645f94d.txt  Screenshot-2025-09-21-200412-Copy-2-_png.rf.cf86c2b65f468d26654981a8d499aca7.txt  Screenshot-2025-09-21-205954-Copy-2-_png.rf.04cafed2c7acfd9a3736293dc761284c.txt  Screenshot-2025-09-21-210727-Copy-2-_png.rf.b776c9f22f3762d5bad3ddc475ac6c68.txt  Screenshot-2025-09-21-213710-Copy-2-_png.rf.47902ffd16ea59e32661b6eb0d9b5433.txt  Screenshot-2025-09-21-213900-Copy-2-_png.rf.489aa76caefa3f2fefd584b77a3d444f.txt  Screenshot-2025-09-26-191650_png.rf.c9bcff9b7f431457bae7392f0b131bae.txt  Screenshot-2025-09-26-203738_png.rf.a00adba729cbeeace729f4d21dcffae7.txt  Screenshot-2025-09-26-214246_png.rf.3a7ba0a84cbb13d3ff918c0532bf2357.txt  b621f6ef-665FC6FD-D017-4D26-89B3-D92F3DE68C3B_png.rf.e3c54ad3ac3ac9c111cf4285e07fa2ed.txt  c7846daf-F101B0E8-3CC5-4E24-A7DE-BBF8BF3279BF_png.rf.4e14d57285b3bfea1aa51e4afdf754f5.txt  d95e943a-0B5B001E-E015-4D0E-BF96-C80AD592E791_png.rf.bff5f386deeb262a915235cf0059a880.txt  f0eb1048-CC153956-FEB7-4617-A9B4-D240121BEB1F_png.rf.65c51f749b2fe40fecc38506eebfc2d5.txt  heroes-of-the-storm-0c6190da-af28-4fc7-afcc-29467b577f2c-undefined_jpg.rf.749d5b6dca96c1ad0ae6fdb761f3899e.txt  (+3 more)
training/train/: labels.cache
training/valid/: labels.cache
(+341 files in other folders)
