[project]
name = "hero-inference"
version = "0.1.0"
description = "YOLO-driven inference service producing detection sidecars for Nexus spectator"
authors = [{name="Nexus Replay"}]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pillow>=10.3.0",
    "opencv-python>=4.9.0.80",
    "ultralytics>=8.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.1",
    "debugpy>=1.8.0",
    "ruff>=0.6.0"
]
