[project]
name = "nexus-orchestrator"
version = "0.1.0"
description = "Orchestrator & supervision layer for Nexus Spectator"
authors = [{name="Nexus Replay"}]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "psutil>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.1",
    "debugpy>=1.8.0",
    "ruff>=0.6.0"
]
