[project]
name = "nexus-session-manager"
version = "0.1.0"
description = "Standalone session lifecycle manager for Nexus spectator"
authors = [{name="Nexus Replay"}]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.1",
    "debugpy>=1.8.0",
    "ruff>=0.6.0"
]
